[project]
name = "myproject"
version = "0.1.0"
description = "A Python project"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.5.7",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-core>=1.3.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langmem>=0.0.30",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sse-starlette>=3.4.1",
    "uvicorn>=0.46.0",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ipykernel==6.30.1",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["langchain_agent*", "src*"]
